# base-respect-game

./: .gitignore  ACTION_ITEMS.md  ALCHEMY_NOT_CALLING_WEBHOOK.md  ALCHEMY_WEBHOOK_SETUP.md  ARCHITECTURE.md  CONTRIBUTION_DISPLAY_UPDATE.md  DATABASE_QUICKSTART.md  DATABASE_SETUP_COMPARISON.md  DISTRIBUTION_STRATEGY.md  ENV_SETUP.md  ENV_VARIABLES_GUIDE.md  FINAL_STATUS.md  FIX_ALCHEMY_NOW.md  FIX_NOW.md  FRACTALLY_PROBLEM_DEFINITION.md  GOVERNANCE_REFACTOR_COMPLETE.md  GOVERNANCE_REFACTOR_GUIDE.md  HACKATHON_PRESENTATION_SCRIPT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MEMBER_APPROVAL.md  LEADERBOARD_TABLE_GUIDE.md  MAINNET_SETUP.md  MEMBER_PROPOSAL_ISSUE_DIAGNOSIS.md  METAMASK_FIX_SUMMARY.md  NAVIGATION_CHANGES_COMPARISON.md  NAVIGATION_TESTING_GUIDE.md  NAVIGATION_UPDATE_SUMMARY.md  PROBLEMS_SOLVED.md  PROFILE_PICTURE_SETUP.md  PROFILE_ROUTING_IMPLEMENTATION.md  PROPOSAL_TYPE_FIX.md  QUICK_START.md  RANKING_LOADING_FIX.md  README.md  REFACTOR_SUCCESS.md  RESPECT_GAME_README.md  RESPECT_GAME_SETUP.md  RESPECT_GAME_VALUE_PROPOSITION.md  (+36 more)
api/: save-x-account.ts  webhook.ts  (+6 more)
bridge/bridge/solana/programs/base_relayer/: Cargo.toml  idl.json
bridge/bridge/solana/programs/base_relayer/src/: constants.rs  errors.rs  lib.rs
bridge/bridge/solana/programs/base_relayer/src/instructions/: initialize.rs  mod.rs  pay_for_relay.rs
bridge/bridge/solana/programs/base_relayer/src/internal/: eip_1559.rs  gas_config.rs  math.rs  mod.rs
bridge/bridge/solana/programs/base_relayer/src/state/: cfg.rs  message_to_relay.rs  mod.rs
bridge/bridge/solana/programs/bridge/: Cargo.toml  idl.json
bridge/bridge/solana/programs/bridge/src/: errors.rs  lib.rs
(+391 files in other folders)
