[package]
name = "base_relayer"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "base_relayer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
bincode = "1.3"
litesvm = "0.6.1"
serde_json = "1.0.145"
solana-account = "2.2.1"
solana-keypair = "2.2.1"
solana-loader-v3-interface = { version = "3.0.0", features = ["serde"] }
solana-message = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
