[package]
name = "bridge"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"
spl-type-length-value = "0.7.0"

alloy-primitives = "=0.8.13"
alloy-sol-types = { version = "=0.8.13" }

hex = "0.4.3"

[dev-dependencies]
bincode = "1.3"
litesvm = "0.6.1"
secp256k1 = { version = "0.28", features = ["recovery"] }
serde_json = "1.0.145"
solana-account = "2.2.1"
solana-keypair = "2.2.1"
solana-loader-v3-interface = { version = "3.0.0", features = ["serde"] }
solana-message = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
hex-literal = "0.4.1"
